RESOLVED FIXED301300
REGRESSION (iOS 26): Pasting content cut from Notes into Mail is illegible in dark mode
https://bugs.webkit.org/show_bug.cgi?id=301300
Summary REGRESSION (iOS 26): Pasting content cut from Notes into Mail is illegible in...
Aditya Keerthi
Reported 2025-10-22 14:36:39 PDT
Attachments
Aditya Keerthi
Comment 1 2025-10-22 14:40:50 PDT
EWS
Comment 2 2025-10-27 14:56:28 PDT
Committed 302202@main (6cae1bfde08c): <https://commits.webkit.org/302202@main> Reviewed commits have been landed. Closing PR #52834 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.